[package]
name = "rusttorch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.33" }
futures = { version = "0.3" } # for our async / await blocks
http-auth-basic = { version = "0.3.3" }
image = { version = "0.24.2" }
log = { version = "0.4" }
once_cell = { version = "1.13" }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tch = { version = "0.8.0" } 
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
